# computer.cpp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
cmake/macos/: Info.plist.in
examples/mac/: README.md  reminders.lua
include/computer_cpp/: AppConfig.h  AppPaths.h  ControlSession.h  Daemon.h  HumanInput.h  Image.h  InferenceClient.h  Json.h  LuaRunner.h  NativeDeps.h  Platform.h  RefStore.h  RuntimeProvenance.h  StringUtils.h  Timeline.h  Transport.h  TrayServerState.h  Updater.h  WindowsUtil.h
scripts/: build-common.sh  build-mac.sh  build.sh  create-local-codesign-identity.sh
src/app/: Main.cpp  TrayIcon.cpp  TrayIcon.h  TrayIconMac.mm  UpdateFlow.cpp  UpdateFlow.h
src/cli/: CliApp.cpp  CliApp.h  CliCommandHelpers.h  CliCommands.cpp  CliCommands.h  CliConfig.cpp  CliConfig.h  CliInputCommands.cpp  CliObserveTargetCommands.cpp  CliOptions.cpp  CliOptions.h  CliOutput.cpp  CliOutput.h  CliRunCommand.cpp  CliRunCommand.h  CliRuntime.cpp  CliRuntime.h  CliSession.cpp  CliSession.h  CliSessionCleanup.cpp  CliSessionCleanup.h  CliSessionInspect.cpp  CliSessionInspect.h  CliSessionLease.cpp  CliSessionLease.h  CliSessionParsing.cpp  CliSessionParsing.h  CliSessionProcess.cpp  CliSessionProcess.h  CliSessionRun.cpp  CliUsage.cpp  CliUsage.h  LuaMain.cpp  LuaPrelude.cpp  LuaPrelude.h  LuaRunner.cpp  PosixArgv.h  main.cpp
src/core/: AppConfig.cpp  AppPaths.cpp  ControlSession.cpp  ControlSessionAcquire.cpp  ControlSessionInternal.cpp  ControlSessionInternal.h  ControlSessionJson.cpp  ControlSessionMetrics.cpp  ControlSessionPrometheus.cpp  ControlSessionQueries.cpp  ControlSessionResources.cpp  ControlSessionStore.cpp  ControlSessionStore.h  ControlSessionValidation.cpp  CurlHandle.h  Image.cpp  InferenceClient.cpp  InferenceConfig.cpp  InferenceConfig.h  InferenceContent.cpp  Json.cpp  NativeDeps.cpp  RefStore.cpp  RuntimeProvenance.cpp  Sqlite.cpp  Sqlite.h  StringUtils.cpp  Timeline.cpp  TrayServerState.cpp  Updater.cpp  UpdaterInternal.h  WindowsUtil.cpp
src/daemon/: Daemon.cpp  DaemonArtifacts.cpp  DaemonArtifacts.h  DaemonBatch.cpp  DaemonBatch.h  DaemonBrowser.cpp  DaemonBrowser.h  DaemonClick.cpp  DaemonClick.h  DaemonControlSession.cpp  DaemonControlSession.h  DaemonDesktop.cpp  DaemonDesktop.h  DaemonIdle.cpp  DaemonIdle.h  DaemonImage.cpp  DaemonImage.h  DaemonInput.cpp  DaemonInput.h  DaemonJson.cpp  DaemonJson.h  DaemonMetadata.cpp  DaemonMetadata.h  DaemonObservation.cpp  DaemonObservation.h  DaemonObservedEvent.cpp  DaemonObservedEvent.h  DaemonParsing.h  DaemonProtocol.cpp  DaemonProtocol.h  DaemonScreenshot.cpp  DaemonScreenshot.h  DaemonScrollCommand.cpp  DaemonSnapshot.cpp  DaemonSnapshot.h  DaemonSocket.cpp  DaemonSocket.h  DaemonTargetCommand.cpp  DaemonTargetCommand.h  DaemonTargetGeometry.cpp  (+10 more)
src/platform/linux/: KWinWaylandInput.cpp  LinuxPng.cpp  LinuxPng.h  PlatformLinux.cpp
src/platform/macos/: PlatformMac.mm
src/platform/windows/: PlatformWindows.cpp
tests/: CliTests.cpp  ControlSessionTests.cpp  CoreTests.cpp  DaemonDispatchTests.cpp  DaemonTests.cpp  InferenceTests.cpp  TestSupport.cpp  TestSupport.h
tests/lua/: allow-error.lua  app-basic.lua  batch-temp-cleanup.lua  browser-open-dry-run.lua  click-box-rect-only-dry-run.lua  click-park-dry-run.lua  defer.lua  desktop-app-tools-dry-run.lua  dry-run.lua  image-split-dry-run.lua  llm-chat-aliases-dry-run.lua  llm-openrouter-defaults-dry-run.lua  micro-agent-dry-run.lua  micro-agent-screenshot-image-dry-run.lua  micro-agent-strict-tool-calls-dry-run.lua  micro-agent-tool-call-probe.lua  mouse-click-count-dry-run.lua  mouse-click-dry-run.lua  named-batch-error.lua  permissions-open-settings-dry-run.lua  ping.lua  press-hold-dry-run.lua  screenshot-region-dry-run.lua  scroll-cluster-dry-run.lua  scroll-no-humanize-dry-run.lua  scroll-read-anchor-dry-run.lua  temp-capture.lua
